# advent-of-code-2024

./: .gitignore  Cargo.toml  Makefile  meson.build
day-1/: historian-hysteria  historian-hysteria.c  historian-hysteria.r
day-2/: red-nosed-reports.c  red-nosed-reports.r
day-9/: disk-fragmenter.c
include/: quicksort.c  quicksort.h
src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  main.rs
